--- a/composer.json
+++ b/composer.json
@@ -2,20 +2,27 @@
     "name": "sbstjn/sliphp",
     "version": "0.1.0",
     "type": "library",
+    "description": "Atomic view and layout engine for PHP 5.4 and above",
     "keywords": ["framework", "view", "layout", "render", "engine", "template"],
     "homepage": "https://github.com/sbstjn/SliPHP",
-    "description": "Atomic view and layout engine for PHP 5.4 and above",
     "license": "MIT",
     "authors": [
-        {
-            "name": "sbstjn",
-            "email": "mail@sbstjn.com"
-        }
+    {
+        "name": "sbstjn",
+        "email": "mail@sbstjn.com"
+    }
     ],
     "require": {
-        "php": ">= 5.4.4"
+        "php" : ">=5.3.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit" : "4.*",
+        "scrutinizer/ocular": "~1.1"
     },
     "autoload": {
         "files": ["load.php"]
+    },
+    "scripts": {
+        "test": "phpunit"
     }
 }
